--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,33 @@
-version: '3.1'
+version: '3.9'
+volumes:
+  web_source:
+  db_source:
+
 
 services:
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile.php
+    volumes:
+      - web_source:/home/dev/source
+    restart: on-failure
+    command: [ "sleep", "infinity" ]
+
   db:
-    image: mysql:latest
+    image: mysql:8.0
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root        
-      MYSQL_DATABASE: karan                
-      MYSQL_USER: user                         
-      MYSQL_PASSWORD: password             
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: activitydb
     volumes:
-      - d:/mysql-data:/var/lib/mysql           
+      - db_source:/var/lib/mysql
 
   phpmyadmin:
-    image: phpmyadmin:latest
+    image: phpmyadmin
     restart: always
     ports:
-      - 8081:80
+      - 8080:80
     environment:
-      PMA_HOST: db                             
-      PMA_USER: user                           
-      PMA_PASSWORD: password               
-      MYSQL_ROOT_PASSWORD: root        
-
-volumes:
-  db-data:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: activitydb
