--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,31 +3,23 @@ volumes:
   web_source:
   db_source:
 
-
 services:
-  web:
-    build:
-      context: .
-      dockerfile: Dockerfile.php
-    volumes:
-      - web_source:/home/dev/source
-    restart: on-failure
-    command: [ "sleep", "infinity" ]
-
   db:
     image: mysql:8.0
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: activitydb
+      MYSQL_DATABASE: my
     volumes:
       - db_source:/var/lib/mysql
 
   phpmyadmin:
-    image: phpmyadmin
+    image: phpmyadmin/phpmyadmin
     restart: always
     ports:
       - 8080:80
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: activitydb
+      PMA_HOST: db
+      PMA_PORT: 3306
+      PMA_USER: root
+      PMA_PASSWORD: root
